# wayfarer

./: .gitignore  Cargo.toml  README.md  index.html  manifest.json  package-lock.json  package.json  tailwind.config.js  tailwind.css  tailwind_stub.css
docs/: CNAME  manifest.json  wayfarer-2a76c629025927ba.js
server/: Cargo.toml
server/src/: main.rs
src/: app.rs  assets.rs  buffs.rs  char_creation.rs  class.rs  css.rs  error.rs  errors.rs  home.rs  icons.rs  indexeddb.rs  items.rs  lobby.rs  login.rs  main.rs  modal.rs  pc.rs  rand.rs  roster.rs  router.rs  settings.rs  state.rs  svg.rs  tables.rs  utils.rs  views.rs  wyrand.rs
src/buffs/: body.rs  class.rs  conditions.rs  held.rs  search.rs
src/class/: details.rs  list.rs
src/indexeddb/: convert.rs  database.rs  dberror.rs  transaction.rs
src/items/: adventure.rs  alchemist.rs  alchemy.rs  arcane.rs  armour.rs  armoursmith.rs  attachable.rs  blacksmith.rs  buffs.rs  consumables.rs  craft.rs  divine.rs  effects.rs  enhancement.rs  features.rs  fletcher.rs  food.rs  fuzzy_match.rs  gems_and_runes.rs  held.rs  illicit_goods.rs  item_prop.rs  item_spec.rs  item_specs.rs  meta.rs  potions.rs  prices.rs  reagents.rs  recipes.rs  search.rs  simple.rs  simple_items.rs  tome.rs  weapons.rs  weaponsmith.rs
src/lobby/: create_pc.rs  pc_basic.rs
src/pc/: basics.rs  class.rs  class_view.rs  combat.rs  craft.rs  crafting.rs  description.rs  edit_item.rs  equip_slot.rs  followers.rs  generators.rs  inventory.rs  journal.rs  main.rs  navbar.rs  overview.rs  pc_class.rs  pc_stat.rs  realm.rs  scout.rs  session.rs  shops.rs  starting_equipment.rs  update.rs
src/pc/basics/: hp.rs
src/pc/class/: buffs.rs  level.rs  view.rs  view_optional.rs
src/pc/class_view/: optional.rs
src/pc/combat/: buff_list.rs  buff_search.rs  buff_view.rs  hp.rs  prof.rs  quick_access.rs  time_tracker.rs  turn_tracker.rs  use_button.rs
src/pc/craft/: commit_btn.rs  recipe.rs  recipebook.rs  substance_btn.rs
src/pc/crafting/: components.rs  supply.rs
src/settings/: database.rs
src/state/: pchar.rs
src/tables/: forage.rs  spell_failure.rs
src/utils/: counter.rs  db.rs  enum_array.rs  fixed_vec.rs  fuzzy_match.rs  index_map.rs  inventory.rs  rw_utils.rs  search.rs  str_op.rs  time.rs  toast.rs  turns.rs
src/views/: backpack.rs  buff.rs  checkbox.rs  confirm_button.rs  count_button.rs  delete_btn.rs  delete_confirm.rs  follower.rs  funds.rs  inventory.rs  item.rs  modal.rs  revealer.rs  toast.rs  utils.rs  wealth.rs
static/: classes.json  spells.json
static/pages/: adventuring.html  creation_guide.html  spellcasting.html
website/: Trunk.toml  index.html  package-lock.json
website/src/: login.rs  main.rs  render_page.rs  spellbook.rs
website/static/: spells.json
(+58 files in other folders)
