[package]
name = "wayfarer"
version = "0.1.3"
edition = "2021"

[dependencies]
leptos = { version = "0.5.1", features = ["serde", "csr"] }
leptos_meta = { version = "0.5.1", features = ["csr"] }
leptos_router = { version = "0.5.1", features = ["csr"]  }
wasm-bindgen = { version = "0.2" }
gloo = { version = "0.10.0", features = ["futures", "events"] }
console_log = { version = "0.2"}
web-sys = "0.3.64"
js-sys = "0.3.61"
serde = "1.0.159"
serde_json = "1.0.95"
thiserror = "1.0.40"
simple_index = { git = "https://codeberg.org/jadehound/simple_index.git"}
once_cell = "1.18.0"
nanorand = { git = "https://github.com/Absolucy/nanorand-rs.git" }
strum = { version = "0.25", features = ["derive"] }
const_format = "0.2.31"
