[package]
name = "wayfarer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
intercom = { path = "../intercom" }
axum = "0.6.16"
tokio = { version = "1.27", features = ["full"] }
tracing-subscriber = "0.3.17"
bonsaidb = { version = "0.4.1", features = ["local-full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"

